log_rework/build_2026-03-12_15-30-36/uav_bridge/stdout_stderr.log
-- Found ament_cmake: 1.3.13 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.18 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.8 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.8 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.8 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.10 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found sensor_msgs: 4.9.1 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found nav_msgs: 4.9.1 (/opt/ros/humble/share/nav_msgs/cmake)
-- Found std_srvs: 4.9.1 (/opt/ros/humble/share/std_srvs/cmake)
-- Found tf2: 0.25.19 (/opt/ros/humble/share/tf2/cmake)
-- Found tf2_ros: 0.25.19 (/opt/ros/humble/share/tf2_ros/cmake)
-- Found quadrotor_msgs: 0.0.0 (/home/th1rt3en/DOCO/ws/install_rework/quadrotor_msgs/share/quadrotor_msgs/cmake)
-- Found px4_msgs: 2.0.1 (/home/th1rt3en/DOCO/ws/install_rework/px4_msgs/share/px4_msgs/cmake)
-- Looking for gz-transport13 -- found version 13.5.0
-- Searching for dependencies of gz-transport13
-- Config-file not installed for ZeroMQ -- checking for pkg-config
-- Checking for module 'libzmq >= 4'
--   Found libzmq , version 4.3.4
-- Checking for module 'uuid'
--   Found uuid, version 2.37.2
-- Looking for gz-utils2 -- found version 2.2.1
-- Searching for dependencies of gz-utils2
-- Searching for <gz-utils2> component [cli]
-- Looking for gz-utils2-cli -- found version 2.2.1
-- Searching for dependencies of gz-utils2-cli
-- Looking for gz-msgs10 -- found version 10.3.2
-- Searching for dependencies of gz-msgs10
-- Looking for gz-utils2 -- found version 2.2.1
-- Looking for gz-math7 -- found version 7.5.1
-- Searching for dependencies of gz-math7
-- Looking for gz-utils2 -- found version 2.2.1
-- Checking for module 'tinyxml2'
--   Found tinyxml2, version 9.0.0
-- Looking for gz-msgs10 -- found version 10.3.2
-- Found ament_cmake_gtest: 1.3.13 (/opt/ros/humble/share/ament_cmake_gtest/cmake)
-- Found ament_lint_auto: 0.12.15 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Found gtest sources under '/opt/ros/humble/src/gtest_vendor': C++ tests using 'Google Test' will be built
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /home/th1rt3en/DOCO/ws/src/uav_bridge/include
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/th1rt3en/DOCO/ws/build_rework/uav_bridge
Consolidate compiler generated dependencies of target uav_bridge_px4_odom_adapter_logic
Consolidate compiler generated dependencies of target uav_bridge_uav_state_bridge_logic
Consolidate compiler generated dependencies of target gtest_main
Consolidate compiler generated dependencies of target uav_control_node
Consolidate compiler generated dependencies of target fmu_topic_namespace_bridge_node
Consolidate compiler generated dependencies of target stereo_camera_bridge_node
Consolidate compiler generated dependencies of target optical_flow_bridge_node
Consolidate compiler generated dependencies of target mono_camera_bridge_node
Consolidate compiler generated dependencies of target gtest
Consolidate compiler generated dependencies of target rangefinder_bridge_node
Consolidate compiler generated dependencies of target tf_bridge_node
Consolidate compiler generated dependencies of target px4_planar_state_reader_node
Consolidate compiler generated dependencies of target offboard_bridge_node
[ 14%] Built target uav_bridge_px4_odom_adapter_logic
[ 14%] Built target uav_bridge_uav_state_bridge_logic
[ 14%] Building CXX object CMakeFiles/uav_control_node.dir/src/math_utils.cpp.o
[ 14%] Building CXX object CMakeFiles/uav_control_node.dir/src/uav_control_node.cpp.o
[ 21%] Built target fmu_topic_namespace_bridge_node
[ 24%] Built target gtest_main
[ 29%] Built target stereo_camera_bridge_node
[ 34%] Built target optical_flow_bridge_node
[ 43%] Built target gtest
[ 43%] Built target mono_camera_bridge_node
[ 58%] Built target rangefinder_bridge_node
[ 58%] Built target px4_planar_state_reader_node
[ 58%] Built target tf_bridge_node
[ 73%] Built target offboard_bridge_node
Consolidate compiler generated dependencies of target test_uav_control_logic
Consolidate compiler generated dependencies of target test_uav_state_bridge_logic
Consolidate compiler generated dependencies of target test_px4_odom_adapter_logic
Consolidate compiler generated dependencies of target px4_odom_adapter_node
Consolidate compiler generated dependencies of target uav_state_bridge_node
[ 87%] Built target test_uav_control_logic
[ 87%] Built target test_uav_state_bridge_logic
[ 87%] Built target test_px4_odom_adapter_logic
[ 97%] Built target px4_odom_adapter_node
[ 97%] Built target uav_state_bridge_node
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp: In member function ‘uint64_t uav_bridge::UavControlNode::nowMicros() const’:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:274:56: error: passing ‘std::__shared_ptr_access<const rclcpp::Clock, __gnu_cxx::_S_atomic, false, false>::element_type’ {aka ‘const rclcpp::Clock’} as ‘this’ argument discards qualifiers [-fpermissive]
  274 |     return static_cast<uint64_t>(this->get_clock()->now().nanoseconds() / 1000);
      |                                  ~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/timer.hpp:27,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:30,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:23:
/opt/ros/humble/include/rclcpp/rclcpp/clock.hpp:87:3: note:   in call to ‘rclcpp::Time rclcpp::Clock::now()’
   87 |   now();
      |   ^~~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:23:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp: In lambda function:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:282:5: error: passing ‘const rclcpp::Clock’ as ‘this’ argument discards qualifiers [-fpermissive]
  282 |     RCLCPP_WARN_THROTTLE(this->get_logger(), *this->get_clock(), 2000, "waiting for valid timestamp before %s", context);
      |     ^~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/timer.hpp:27,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:30,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:23:
/opt/ros/humble/include/rclcpp/rclcpp/clock.hpp:87:3: note:   in call to ‘rclcpp::Time rclcpp::Clock::now()’
   87 |   now();
      |   ^~~
gmake[2]: *** [CMakeFiles/uav_control_node.dir/build.make:76: CMakeFiles/uav_control_node.dir/src/uav_control_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:471: CMakeFiles/uav_control_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
